# gematria

./: .gitignore  WORKSPACE  test.asm
gematria/datasets/: BUILD  convert_bhive_to_llvm_exegesis_input.cc  exegesis_benchmark.cc  find_accessed_addrs_exegesis.cc
gematria/datasets/python/: BUILD.bazel  generate_vocab.py  split_dataset.py
gematria/datasets/tests/: blocks_per_json_file.test  conversion.test  json.test  loop_register.test  max_bb_count.test  report_progress.test
gematria/io/: BUILD.bazel  proto_parser.cc  proto_parser.h
gematria/io/python/: BUILD.bazel  proto_parser.cc  tfrecord.py
gematria/model/python/: BUILD.bazel  eval.py  main_function.py  model_base.py
gematria/testing/testdata/: basic_blocks_with_throughput.pbtxt
tools/: BUILD  bb_annotator.cc
